<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/shape_user_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/img_face"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:src="@drawable/icon2" />


    <!--<RelativeLayout-->
        <!--android:layout_width="160dp"-->
        <!--android:layout_height="1600dp"-->
        <!--android:background="@drawable/face_bg"-->
        <!--android:layout_centerInParent="true"-->
        <!--&gt;-->

        <!-- border_outside_color 外部圆圈的颜色 -->
        <!-- border_inside_color 内部部圆圈的颜色 -->
        <!-- border_thickness 外圆和内圆的宽度 -->
        <com.jvt.ui.widget.RoundImageView
            android:id="@+id/img_lib_face"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon2"
            imagecontrol:border_outside_color="#9e277EE5"
            imagecontrol:border_thickness="2dp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/snap_name"
            android:textColor="@color/white"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/tv_name"
            android:background="@drawable/bg_snap_type"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/snap_vip"
            android:layout_marginTop="11dp"
            android:textSize="20dp" />



        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:maxLines="1"
            android:text="@string/snap_count"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:text="2018/12/"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_time"
            android:layout_centerHorizontal="true"
            android:text="@string/snap_remarks"
            android:textColor="@color/white"
            android:layout_marginTop="11dp"
            android:maxWidth="200dp"
            android:textSize="22dp" />
    </RelativeLayout>
</LinearLayout>
