<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:id="@+id/layout_single"
    android:visibility="visible"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.8">

        <ImageView
            android:id="@+id/img_face"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon2"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:background="@drawable/face_bg"
            android:layout_centerInParent="true"
            >

        <com.jvt.ui.widget.RoundImageView
            android:id="@+id/img_lib_face"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon2" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"

        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_user_bg"
            android:paddingBottom="50dp"
            android:paddingTop="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/snap_name"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <!--<TextView-->
                <!--android:id="@+id/tv_similarity"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tv_name"-->
                <!--android:ellipsize="end"-->
                <!--android:maxLines="1"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/snap_similarity"-->
                <!--android:textSize="22dp"-->
                <!--android:visibility="gone" />-->

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_snap_type"
                android:padding="5dp"
                android:text="@string/snap_vip"
                android:textSize="20dp" />


            <!--<TextView-->
                <!--android:id="@+id/tv_sex"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tv_type"-->
                <!--android:ellipsize="end"-->
                <!--android:maxLines="1"-->
                <!--android:text="@string/snap_sex"-->
                <!--android:textSize="22dp"-->
                <!--android:visibility="gone" />-->

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_type"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:text="@string/snap_count"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:text="2018/12/"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tv_remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_time"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/snap_remarks"
                android:textColor="@color/white"
                android:maxWidth="300dp"
                android:textSize="22dp" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
